[package]
name = "exchange-cache"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "get_ex_rates"
path = "src/get_exchange_rates.rs"

[[bin]]
name = "test"
path = "src/test.rs"

[[bin]]
name = "web_server"
path = "src/main.rs"


[dependencies]
serde_json = "1.0"
futures = "0.3.21"
reqwest = { version = "0.11.11", features = ["blocking"] }
actix-web = "4"
axum = "0.5.13"
hyper = { version = "0.14.20", features = ["full"] }
tokio = { version = "1.20.1", features = ["full"] }
tower = "0.4.13"
log = "0.4"
pretty_env_logger = "0.3"
